--- a/frontend/src/locales/mk.json
+++ b/frontend/src/locales/mk.json
@@ -27,7 +27,8 @@
     "modal": {
       "confirmationTitle": "Вашето барање е успешно испратено!",
       "successMessage": "Го примивме Вашето барање за резервација. Податоците кои ги доставивте се:",
-      "followUpNote": "Ќе добиете е-пошта за потврда на Вашата резервација во најкраток можен рок."
+      "followUpNote": "Ќе добиете е-пошта за потврда на Вашата резервација во најкраток можен рок.",
+      "unknownDate": "Непознат датум на враќање"
     },
 
     "sliderAlt": "Слика од превоз",
@@ -109,7 +110,11 @@
     "svetiNikole": "Свети Николе",
     "bus_station": "Автобуска Станица",
     "skopje_clinic": "Клинички Центар",
-    "skopje_student_home": "Студентски Дом \"Гоце Делчев\""
+    "skopje_student_home": "Студентски Дом \"Гоце Делчев\"",
+    "alkaloid": "Алкалоид",
+    "city_mall": "Сити Мол",
+    "guc": "ГУЦ",
+    "continental": "Хотел Континентал"
   },
   "faq": {
     "title": "Често поставувани прашања",
@@ -135,7 +140,7 @@
   },
   "terms": {
     "title": "Услови за користење",
-    "intro": "Ве молиме внимателно прочитајте ги условите за користење на нашиот веб-сајт. Користењето на сајтот значи дека се согласувате со овие услови.",
+    "intro": "Ве молиме внимателно прочитајте ги Условите за користење на нашиот веб-сајт. Користењето на сајтот значи дека се согласувате со овие услови.",
     "userResponsibilitiesTitle": "Обврски на корисникот",
     "userResponsibilitiesContent": "Корисниците се обврзуваат да го користат сајтот во согласност со сите важечки закони и овие услови. Забрането е несоодветно или незаконско користење на содржините и услугите на сајтот.",
     "limitationOfLiabilityTitle": "Ограничување на одговорноста",
@@ -150,10 +155,13 @@
     "title": "Политика за приватност",
     "intro": "Вашата приватност е наш највисок приоритет. Со оваа Политика за приватност Ве информираме кои информации се собираат, на кој начин се користат и како се заштитени при користењето на нашата веб-страница.",
     "dataCollectionTitle": "Собирање податоци",
-    "dataCollectionContent": "Ние не зачувуваме лични податоци преку логин или регистрација, бидејќи такви функционалности не постојат на овој сајт. Единствените информации кои може да ги добиеме се оние што доброволно ќе ги внесете преку контакт формата (на пример: име и е-пошта), и тие се користат единствено за одговор на Вашето барање.",
+    "dataCollectionContent": "Секој патник е должен да ги внесе своите основни податоци при користење на нашите услуги, вклучувајќи име и презиме, е-пошта и телефонски број. Овие информации се собираат со цел потврда и организирање на резервации или услуги, за контакт со патникот во врска со неговите барања или прашања, како и за испраќање важни информации поврзани со услугата.",
+
+    "protectionTitle": "Заштита на податоци",
+    "protectionContent": "Сите лични податоци се чуваат безбедно и не се споделуваат со трети лица, освен ако тоа е законски потребно или за исполнување на нашите услуги. Користиме технички и организациски мерки за заштита на податоците од неовластен пристап, промена или уништување.",
     "cookiesTitle": "Користење на колачиња (cookies)",
-    "cookiesContent": "На нашата веб-страница можат да се користат колачиња за основна функционалност, анализа на посетеност или подобрување на корисничкото искуство. Не се користат колачиња за следење на корисници или за маркетинг цели.",
+    "cookiesContent": "Нашата веб-страница може да користи колачиња за основна функционалност, анализа на посетеност и подобрување на корисничкото искуство. Не се користат колачиња за маркетинг или следење на корисници.",
     "contactTitle": "Контакт информации",
-    "contactContent": "За какви било прашања поврзани со приватноста, слободно контактирајте нè на mattransdooel@gmail.com"
+    "contactContent": "За прашања поврзани со приватноста, контактирајте нè на mattransdooel@gmail.com"
   }
 }
