--- a/frontend/src/locales/mk.json
+++ b/frontend/src/locales/mk.json
@@ -32,8 +32,24 @@
     },
 
     "sliderAlt": "Слика од превоз",
-    "aboutTitle": "За Нас",
-    "aboutDescription": "Ние сме лиценцирана компанија за патнички превоз со повеќегодишно искуство и посветеност кон квалитетна услуга. Наш приоритет е Вашата безбедност, удобност и навременост при секое патување. Располагаме со модерни и редовно сервисирани возила, како и професионален тим од возачи кои секогаш се подготвени да Ви обезбедат пријатно и сигурно искуство. Нудиме секојдневен превоз помеѓу Берово и Скопје. Патниците се земаат и оставаат на повеќе локации во Скопје и Берово, во зависност од нивната потреба, со можност за договорени попатни станици во градови низ маршутата. ",
+
+    "aboutTitle": "За нас",
+    "aboutDescription": "Ние сме лиценцирана компанија за патнички превоз со повеќегодишно искуство и посветеност кон обезбедување на квалитетна услуга. Наш приоритет е Вашата безбедност, удобност и навременост при секое патување. Со модерни и редовно сервисирани возила, како и професионален тим од возачи, Ви гарантираме пријатно и сигурно патничко искуство.",
+
+    "aboutSections": {
+      "regularTransport": {
+        "title": "Редовен превоз",
+        "text": "Нудиме секојдневен превоз помеѓу Берово и Скопје. Патниците се земаат и оставаат на повеќе локации во двата града, во зависност од нивната потреба, со можност за договорени попатни станици во градови низ рутата."
+      },
+      "additionalServices": {
+        "title": "Дополнителни услуги",
+        "intro": "Покрај редовниот превоз, обезбедуваме и:",
+        "weddings": "Организиран превоз за свадби и прослави",
+        "groupTransport": "Групен превоз по договор, целосно прилагоден на Вашите барања",
+        "footerText": "Без разлика дали Ви е потребен превоз за приватни или деловни настани, нашата компанија Ви стои на располагање за сигурно и удобно патување."
+      }
+    },
+
     "aboutText": "Резервирајте онлајн лесно и брзо, и патувајте без грижи со партнери на кои можете да се потпрете",
     "schedule": {
       "berovo": "Секојдневно поаѓање од Берово",
