--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -39,7 +39,7 @@
     "aboutSections": {
       "regularTransport": {
         "title": "Regular Transport",
-        "text": "We offer daily transport between Berovo and Skopje. Passengers are picked up and dropped off at multiple locations in both cities, depending on their needs, with the possibility of agreed intermediate stops along the route."
+        "text": "MAT-TRANS offers daily transportation between Berovo and Skopje. Passengers are picked up and dropped off at multiple locations in both cities, depending on their needs, with the option of agreed stops in towns along the route."
       },
       "additionalServices": {
         "title": "Additional Services",
