--- a/frontend/src/locales/mk.json
+++ b/frontend/src/locales/mk.json
@@ -39,7 +39,7 @@
     "aboutSections": {
       "regularTransport": {
         "title": "Редовен превоз",
-        "text": "Нудиме секојдневен превоз помеѓу Берово и Скопје. Патниците се земаат и оставаат на повеќе локации во двата града, во зависност од нивната потреба, со можност за договорени попатни станици во градови низ рутата."
+        "text": "МАТ-ТРАНС нуди секојдневен превоз помеѓу Берово и Скопје. Патниците се земаат и оставаат на повеќе локации во двата града, во зависност од нивната потреба, со можност за договорени попатни станици во градови низ рутата."
       },
       "additionalServices": {
         "title": "Дополнителни услуги",
