--- a/frontend/src/locales/mk.json
+++ b/frontend/src/locales/mk.json
@@ -34,12 +34,13 @@
     "sliderAlt": "Слика од превоз",
 
     "aboutTitle": "За нас",
-    "aboutDescription": "Ние сме лиценцирана компанија за патнички превоз со повеќегодишно искуство и посветеност кон обезбедување на квалитетна услуга. Наш приоритет е Вашата безбедност, удобност и навременост при секое патување. Со модерни и редовно сервисирани возила, како и професионален тим од возачи, Ви гарантираме пријатно и сигурно патничко искуство.",
+    "aboutDescription": "е лиценцирана компанија за патнички превоз со повеќегодишно искуство и посветеност кон обезбедување на квалитетна услуга. Наш приоритет е Вашата безбедност, удобност и навременост при секое патување. Со модерни и редовно сервисирани возила, како и професионален тим од возачи, Ви гарантираме пријатно и сигурно патничко искуство.",
 
     "aboutSections": {
       "regularTransport": {
         "title": "Редовен превоз",
-        "text": "МАТ-ТРАНС нуди секојдневен превоз помеѓу Берово и Скопје. Патниците се земаат и оставаат на повеќе локации во двата града, во зависност од нивната потреба, со можност за договорени попатни станици во градови низ рутата."
+        "company": "МАТ-ТРАНС",
+        "text": " нуди секојдневен превоз помеѓу Берово и Скопје. Патниците се земаат и оставаат на повеќе локации во двата града, во зависност од нивната потреба, со можност за договорени попатни станици во градови низ рутата."
       },
       "additionalServices": {
         "title": "Дополнителни услуги",
