--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -45,6 +45,7 @@
       "additionalServices": {
         "title": "Additional Services",
         "intro": "In addition to regular transport, we provide:",
+        "airportTransport": "Organized transport to and from Skopje Airport",
         "weddings": "Organized transport for weddings and celebrations",
         "groupTransport": "Group transport by arrangement, fully tailored to your requirements",
         "footerText": "Whether you need transport for private or business events, our company is at your disposal for safe and comfortable travel."
