--- a/frontend/src/locales/mk.json
+++ b/frontend/src/locales/mk.json
@@ -46,6 +46,7 @@
         "title": "Дополнителни услуги",
         "intro": "Покрај редовниот превоз, обезбедуваме и:",
         "weddings": "Организиран превоз за свадби и прослави",
+        "airportTransport": "Организиран превоз до Скопскиот аеродром и назад",
         "groupTransport": "Групен превоз по договор, целосно прилагоден на Вашите барања",
         "footerText": "Без разлика дали Ви е потребен превоз за приватни или деловни настани, нашата компанија Ви стои на располагање за сигурно и удобно патување."
       }
