--- a/frontend/src/locales/mk.json
+++ b/frontend/src/locales/mk.json
@@ -141,13 +141,13 @@
     "a1": "Препорачуваме резервација барем еден ден порано за да си обезбедите место.",
 
     "q2": "Дали има попуст за деца?",
-    "a2": "Да, децата под 7 години имаат 50% попуст.",
+    "a2": "Да, децата до 7 години имаат 50% попуст.",
 
     "q3": "Колку чини билетот?",
-    "a3": "Цената на билетот е 500 денари во еден правец.",
+    "a3": "<strong>Цени на билети до Скопје:</strong><br/>\n<ul>\n<li><strong>Од Берово: 550</strong> денари во еден правец, <strong>900</strong> денари повратен билет.</li>\n<li><strong>Од Виница: 450</strong> денари во еден правец, <strong>700</strong> денари повратен билет.</li>\n<li><strong>Од Свети Николе: 300</strong> денари во еден правец.</li>\n</ul>",
 
-    "q4": "Дали може да купам повратен билет и која е неговата цена?",
-    "a4": "Да, повратен билет чини 900 денари и важи 30 дена од датумот на поаѓање.",
+    "q4": "Колку време важи повратниот билет?",
+    "a4": "Повратниот билет важи 30 дена од датумот на поаѓање.",
 
     "q5": "Како да откажам резервација?",
     "a5": "Откажување е можно преку телефонски повик најдоцна 12 часа пред поаѓање."
